syntax = "proto3";

option csharp_namespace = "DatabaseApp.AppCommunication.Grpc";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service Database {
  rpc PreregisterUser (PreregisterUserRequest) returns (PreregisterUserReply);
  rpc CheckUserEmailStatus (CheckUserEmailStatusRequest) returns (CheckUserEmailStatusReply);
  rpc GetUserInfo (GetUserInfoRequest) returns (GetUserInfoReply);

  rpc GetAvailableGroups (google.protobuf.Empty) returns (GetAvailableGroupsReply);
  rpc GetAvailableLabClasses (GetAvailableLabClassesRequest) returns (GetAvailableLabClassesReply);

  rpc TrySetGroup (TrySetGroupRequest) returns (TrySetGroupReply);
  rpc TryEnqueueInClass (TryEnqueueInClassRequest) returns (TryEnqueueInClassReply);

  rpc AddSubscriber (AddSubscriberRequest) returns (AddSubscriberReply);
  rpc DeleteSubscriber (DeleteSubscriberRequest) returns (DeleteSubscriberReply);

  rpc GetSubscribers (google.protobuf.Empty) returns (GetSubscribersReply);
}

message PreregisterUserRequest {
  string fullName = 1;
  int64 telegramId = 2;
  string email = 3;
  string groupName = 4;
  EmailToken token = 5;
}

message PreregisterUserReply {
  int64 telegramId = 1;
  bool isFailed = 2;
  string errorMessage = 3;
}

message CheckUserEmailStatusRequest {
  int64 telegramId = 1;
}

message CheckUserEmailStatusReply {
  bool isEmailConfirmed = 1;
}

message EmailToken {
  string guid = 1;
  int64 telegramId = 2;
  google.protobuf.Timestamp expirationDate = 3;
}

message GetUserInfoRequest {
  int64 userId = 1;
}

message GetUserInfoReply {
  string fullName = 1;
  string groupName = 2;
  bool isEmailConfirmed = 3;
  bool isFailed = 4;
  string errorMessage = 5;
}

message GetAvailableGroupsReply {
  map<int32, string> idGroupsMap = 1;
}

message GetAvailableLabClassesRequest {
  int64 userId = 1;
}
message ClassInformation {
  int32 classId = 1;
  string className = 2;
  int64 classDateUnixTimestamp = 3;
}
message GetAvailableLabClassesReply {
  repeated ClassInformation classInformation = 1;
  bool isFailed = 2;
  string errorMessage = 3;
}

message TrySetGroupRequest {
  int64 userId = 1;
  string groupName = 2;
  string fullName = 3;
}

message TrySetGroupReply {
  string groupName = 1;
  string fullName = 2;
  bool isFailed = 3;
  string errorMessage = 4;
}

message TryEnqueueInClassRequest {
  int64 userId = 1;
  int32 classId = 2;
}

message TryEnqueueInClassReply {
  repeated string studentsQueue = 1;
  string className = 2;
  int64 classDateUnixTimestamp = 3;
  bool wasAlreadyEnqueued = 4;
  bool isFailed = 5;
  string errorMessage = 6;
}

message AddSubscriberRequest {
  int64 subscriberId = 1;
}

message AddSubscriberReply {
  bool isFailed = 1;
  string errorMessage = 2;
}

message DeleteSubscriberRequest {
  int64 subscriberId = 1;
}

message DeleteSubscriberReply {
  bool isFailed = 1;
  string errorMessage = 2;
}

message GetSubscribersReply {
  repeated SubscriberInformation subscribers = 1;
  bool isFailed = 2;
  string errorMessage = 3;
}

message SubscriberInformation {
  int64 userId = 1;
  int32 groupId = 2;
}